[tool.poetry]
name = "Bad Server Cloner V2.0"
version = "2.0"
description = ""
authors = ["Bad"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
discord = "^1.7.3"
psutil = "^5.9.0"
pypresence = "^4.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
